2005-11-03  Andrew Cagney  <cagney@redhat.com>

	* Task.java (Task(Task,TaskId)): Delete.
	* LinuxTask.java (Task(Task,TaskId)): Delete.
	* LinuxHost.java: Use Task(Proc,TaskId,boolean).
	* LinuxProc.java: Ditto.

	* Task.java: Drop running parameter from constructor.
	* TaskState.java: Delete running parameter from .initial.  Delete
	startStopped state.
	* LinuxTask.java: Update.

	* Proc.java: Delete running parameter from constructor and
	.sendNewAttachedTask, and .sendNewAttachedProc.
	* LinuxProc.java: Update.
	* ProcState.java: Drop running parameter from .initial; delete
	startStopped state.

	* HostState.java: Replace processPerformCreateAttachedProc with
	processRequestCreateAttachedProc.  Drop sendCreateAttachedProc's
	running parameter.
	* Host.java: Fold processCreateAttachedProc into
	requestCreateAttachedProc.
	* LinuxHost.java: Update.

	* Host.java (requestCreateAttachedStoppedProc): Delete.
	* TaskState.java: When notifyAttached has blockers and a trap,
	transition a startRunning task to blockedContinue.
	* TestRun.java: Re-implement testCreateAttachedStoppedProc to use
	TaskObserver.Attached.

	* Host.java (requestCreateAttachedProc): Rename
	requestCreateAttachedContinuedProc.
	* TestExec.java, TestI386Modify.java, TestI386Regs.java,
	TestLib.java, TestModify.java, TestProcGet.java, TestRun.java,
	TestStep.java, TestSyscall.java, TestSyscall2.java,
	TestSyscallOpen.java, TestTaskClonedObserver.java,
	TestTaskForkedObserver.java, TestTaskObserver.java,
	TestTaskTerminateObserver.java: Update.

	* Proc.java (Proc(Task,ProcId): New constructor.
	* LinuxProc.java (Proc(Task,ProcId): Ditto.
	* Task.java (Task(Task,TaskId)): New constructor.
	* LinuxTask.java (Task(Task,TaskId)): Ditto.
	* LinuxHost.java: Use new LinuxProc and LinuxTask constructors.

	* Proc.java (sendAttach(boolean)): Delete.
	* LinuxProc.java (sendAttach(boolean)): Ditto.

	* Proc.java: Reduce constructors to just one.
	* Task.java: Reduce constructors to just one.